# kitsune-pytorch

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py  update_reqs.sh
.github/workflows/: publish-package.yml  python-package.yml
kitsune/: anomaly_score.py  data.py  engine.py  models.py  scalers.py  train.py
tests/: test_kitsune.py
